--- a/app/src/main/res/layout/genre_row.xml
+++ b/app/src/main/res/layout/genre_row.xml
@@ -7,20 +7,35 @@
         <variable
             name="genre"
             type="com.example.wikimusic.models.genre.Genre" />
+
+        <variable
+            name="genreListViewModel"
+            type="com.example.wikimusic.viewmodels.GenreListViewModel" />
+        
+
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:foregroundGravity="center_horizontal"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="25dp"
+        app:contentPaddingLeft="10dp"
+        app:contentPaddingRight="10dp"
+        android:layout_marginHorizontal="1dp"
+        android:layout_marginVertical="10dp"
+        android:onClick="@{()->genreListViewModel.onCardSelected(genre)}"
 
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{genre.name}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:textSize="20sp"
+            android:textAllCaps="true"
+            android:layout_gravity="center"
+            android:paddingVertical="15dp"
+            android:textAlignment="center"
+            android:text="@={genre.name}"
+             />
+    </androidx.cardview.widget.CardView>
 </layout>
