--- a/app/src/main/res/layout/activity_genre_list.xml
+++ b/app/src/main/res/layout/activity_genre_list.xml
@@ -21,7 +21,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.Genre.GenreListActivity">
+            tools:context=".ui.genre.genreList.GenreListActivity">
 
             <TextView
                 android:id="@+id/appName"
