--- a/app/src/main/res/layout/genre_row.xml
+++ b/app/src/main/res/layout/genre_row.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="genreListViewModel"
-            type="com.example.wikimusic.viewmodels.GenreListViewModel" />
+            type="com.example.wikimusic.viewmodels.genre.GenreListViewModel" />
         
 
     </data>
