--- a/app/src/main/res/layout/activity_genre_list.xml
+++ b/app/src/main/res/layout/activity_genre_list.xml
@@ -7,11 +7,11 @@
     <data>
         <variable
             name="adapter"
-            type="com.example.wikimusic.adapters.GenreListAdapter" />
+            type="com.example.wikimusic.genre.adapters.GenreListAdapter" />
         
         <variable
             name="layoutManager"
-            type="androidx.recyclerview.widget.GridLayoutManager" />
+            type="androidx.recyclerview.widget.StaggeredGridLayoutManager" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -21,7 +21,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.genre.genreList.GenreListActivity">
+            tools:context=".genre.ui.GenreListActivity">
 
             <TextView
                 android:id="@+id/appName"
