--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -6,7 +6,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.album.albumList.AlbumFragment">
+        tools:context=".album.ui.AlbumListFragment">
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
