--- a/app/src/main/res/layout/genre_row.xml
+++ b/app/src/main/res/layout/genre_row.xml
@@ -11,51 +11,41 @@
         <variable
             name="genreListViewModel"
             type="com.example.wikimusic.genre.viewmodels.GenreListViewModel" />
-        
+
 
     </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
-        android:foregroundGravity="center_horizontal"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="1dp"
         android:layout_marginVertical="5dp"
-        app:cardElevation="0dp"
+        android:foregroundGravity="center_horizontal"
         android:onClick="@{()->genreListViewModel.onCardSelected(genre)}"
-        >
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        app:cardElevation="0dp">
 
-            <ImageView
-                android:id="@+id/backgroundImage"
-                android:layout_width="105dp"
-                android:layout_height="105dp"
-                android:src="@drawable/ic_bluerecord"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@drawable/corner_radius"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/gilroy_bold"
+                android:text="@={genre.name}"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-            </ImageView>
-
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@={genre.name}"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:fontFamily="@font/galdeano"
-                android:textAllCaps="true"
-                app:layout_constraintVertical_bias="0.8"
-                android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="@id/backgroundImage"
-                app:layout_constraintTop_toTopOf="@id/backgroundImage"
-                app:layout_constraintEnd_toEndOf="@id/backgroundImage"
-                app:layout_constraintStart_toStartOf="@+id/backgroundImage" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.8" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
