--- a/app/src/main/res/layout/fragment_tracks.xml
+++ b/app/src/main/res/layout/fragment_tracks.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="adapter"
+            type="com.example.wikimusic.track.adapters.TrackListAdapter" />
+        <variable
+            name="layoutManager"
+            type="androidx.recyclerview.widget.LinearLayoutManager" />
+    </data>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -10,10 +18,13 @@
         tools:context=".track.ui.TrackListFragment">
 
         <!-- TODO: Update blank fragment layout -->
-        <TextView
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="hello_tracks_fragment" />
+            app:layoutManager="@{layoutManager}"
+            android:adapter="@{adapter}">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
     </FrameLayout>
 </layout>
