--- a/app/src/main/res/layout/album_row.xml
+++ b/app/src/main/res/layout/album_row.xml
@@ -15,7 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
 
         android:onClick="@{()->albumListViewModel.onCardSelected(album)}"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
