--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -10,10 +10,13 @@
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        app:cardElevation="0dp"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:paddingVertical="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
@@ -22,6 +25,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 app:cardCornerRadius="10dp"
+                app:cardElevation="10dp"
                 app:layout_constraintHorizontal_bias="0"
                 android:layout_marginStart="5dp"
                 app:layout_constraintTop_toTopOf="parent"
