--- a/app/src/main/res/layout/activity_artist_details.xml
+++ b/app/src/main/res/layout/activity_artist_details.xml
@@ -5,6 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     >
 
+    <data>
+        <variable
+            name="artist_details"
+            type="com.example.wikimusic.artist.models.Artist" />
+
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,8 +31,8 @@
                 android:id="@+id/artistImage"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0"
@@ -41,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/gilroy_bold"
-                android:text="Taylor Swift"
+                android:text="@{artist_details.name}"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="@+id/artistImage"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25sp"
                 android:fontFamily="@font/gilroy_bold"
-                android:text="385K"
+                android:text="@{artist_details.stats.playCount}"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25sp"
                 android:fontFamily="@font/gilroy_bold"
-                android:text="127K"
+                android:text="@{artist_details.stats.listeners}"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -112,6 +118,20 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <TextView
+            android:text="@{artist_details.bio.summary}"
+            app:layout_constraintVertical_bias="0"
+            android:layout_marginTop="20dp"
+            android:id="@+id/summary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/gilroy"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/genreChips" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/genreChips"
             android:layout_width="wrap_content"
@@ -138,13 +158,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/genreChips"
-            app:layout_constraintVertical_bias="0"></TextView>
+            app:layout_constraintTop_toBottomOf="@+id/summary"
+            app:layout_constraintVertical_bias="0" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/topAlbumsList"
             app:layout_constraintVertical_bias="0"
-            android:layout_marginTop="10dp"
             app:layout_constraintHorizontal_bias="0.05"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -159,7 +178,7 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/gilroy"
             android:text="Top Tracks"
             android:textSize="20sp"
@@ -176,7 +195,7 @@
             app:layout_constraintVertical_bias="0"
             android:layout_marginTop="10dp"
             app:layout_constraintHorizontal_bias="0.05"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -184,8 +203,4 @@
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <data>
-
-
-    </data>
 </layout>
