--- a/app/src/main/res/layout/album_row.xml
+++ b/app/src/main/res/layout/album_row.xml
@@ -15,13 +15,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
 
         android:onClick="@{()->albumListViewModel.onCardSelected(album)}"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="170dp"
+            android:layout_height="170dp"
+            android:layout_margin="5dp"
             android:elevation="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -30,8 +31,8 @@
 
             <ImageView
                 android:id="@+id/albumImage"
-                android:layout_width="150dp"
-                android:layout_height="150dp" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </androidx.cardview.widget.CardView>
 
